--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <form>
         <div class="input-group">
             <label for="name">Név</label>
-            <input name="name" type="text" id="name">
+            <input name="name" type="text" id="name" class="form-control">
+            <label for="email">Email</label>
+            <input name="email" type="text" id="email" class="form-control">
         </div>
     </form>
 </body>
